no we have start page with admin and user login links

--- a/iCrawler/main/templates/index.html
+++ b/iCrawler/main/templates/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>API</title>
+    <title>CNSAPI</title>
 </head>
 <body>
-    <h1>API</h1>
-    <ul>
-        <li><a href="/api">Contract Notices</a></li>
-        <li><a href=" {% url 'all_profiles_api' %}"> Profiles</a></li>
+    <h1>Contract notices scraper API</h1>
 
+    <ul>
+        <li><a href="/admin">ADMIN Login</a></li>
+        <li><a href="/accounts/login">USER Login</a></li>
+        <li><a href="/api/list">List of all scraped Contract Notices</a></li>
     </ul>
 </body>
 </html>
