--- a/iCrawler/main/templates/registration/login.html
+++ b/iCrawler/main/templates/registration/login.html
@@ -1,6 +1,6 @@
 {%extends "registration/base.html"%}
 
-{% load bootstrap5 %}
+{% load django_bootstrap5 %}
 
 {% block content %}
 <div class="all" style="background-attachment: fixed;">
