--- a/cnCrawler/main/templates/index.html
+++ b/cnCrawler/main/templates/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends "registration/base.html"%}
+
+{% load django_bootstrap5 %}
+
+{% block content %}
 <head>
     <meta charset="UTF-8">
 
@@ -11,7 +14,8 @@
     <ul>
         <li><a href="/admin">ADMIN Login</a></li>
         <li><a href="/accounts/login">USER Login</a></li>
-        <li><a href="/api/list">List of all scraped Contract Notices</a></li>
+        <li><a href="/contract_notice_api/list">List of all scraped Contract Notices</a></li>
     </ul>
 </body>
-</html>
+
+{% endblock %}
