refactoring and adding readme file

--- a/cnCrawler/main/templates/registration/login.html
+++ b/cnCrawler/main/templates/registration/login.html
@@ -27,6 +27,8 @@
             <input type="hidden" name="next" value="{{next}}">
             </form>
             <p>You dont have an account? <a href="/accounts/register">Sign up</a></p>
+            <p>Login as administrator. <a href="/admin">AdminLogin</a></p>
+
         </div>
         </div>
     </div>
