--- a/cnCrawler/main/templates/registration/registration_form.html
+++ b/cnCrawler/main/templates/registration/registration_form.html
@@ -32,6 +32,7 @@
 
           </form>
           <p>Have an account. <a href="/accounts/login">Login</a></p>
+          <p>Login as administrator. <a href="/admin">AdminLogin</a></p>
 
         </div>
 
